# senza

./: .gitignore  .gitmodules  README.md  Start-Server.ps1  __init__.py  base.html  dom_router.py  html_components.html  index.html  main.py  pyproject.toml  releases.txt  websocket.py
compiler/: compiler.py
components/: __init__.py  abase.py  anchor.py  button.py  canvas.py  card.py  div.py  embed.py  form.py  h1.py  h2.py  h3.py  h4.py  h5.py  h6.py  iframe.py  img.py  input.py  label.py  link.py  ptag.py  select.py  span.py  svg.py  textarea.py  video.py
docker/: docker-compose.yaml  dockerfile
public/: index.css  index.css.map  index.html  releases.txt
public/pyscript/: codemirror-Cuc1ujlq.js  codemirror-Cuc1ujlq.js.map  codemirror_commands-DrGPggEa.js  codemirror_commands-DrGPggEa.js.map  codemirror_lang-python-CJNnzWx3.js  codemirror_lang-python-CJNnzWx3.js.map  codemirror_language-w-S9uYcH.js  codemirror_language-w-S9uYcH.js.map  codemirror_view-DfjLm8GV.js  (+18 more)
pyscript/: README  __init__.py  display.py  display.pyi  event_handling.py  event_handling.pyi  fetch.py  magic_js.pyi  util.py  websocket.py
pyweb/: media.py  pydom.py
routers/: nav.py
sass/: index.sass  senza.sass
scripts/: Compile-Sass.ps1  Start-Server.ps1  compile-sass.sh  start-server.sh
senza/: dom_router.py  websocket.py
sigil_script/: app.py  context.py  dashboard.py  dom_router.py  pyscript.toml  queries.py
stubs/: pydom.pyi
utils/: __init__.py  bootstrap.py  compile_sass.py  push_version.py  sync_pyodide.py  sync_pyscript_lsp.py
web/: app.py  config.toml  context.py  queries.py
(+58 files in other folders)
