[tool.poetry]
name = "senza"
version = "0.1.5"
description = "pyscript dom library"
authors = ["josh wilkinson <josh@joshsw.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
tomli-w = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'main:server.run'